[package]
name = "rustin_bot_publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = {version="0.7",features = ["macros"]} 
dotenvy = "0.15"

lapin = "2"
futures = "0.3"